# Prompt-Eng

./: .coverage  .gitignore  CHEAT_SHEET.md  CLAUDE.md  ENTERPRISE_TEST_RESULTS.md  MYSQL_CHEAT_SHEET.md  Makefile  README.md  REFACTORING_TODO.md  TEST_EXECUTION_LOG.txt  USAGE.md  cli.py  main.py  main_evaluation.py  main_modern.py  monitoring_rhel9_enterprise_prompt.md  project_regeneration_prompt.md  pyproject.toml  pytest.ini  requirements.txt  test_enterprise_demo.py  test_enterprise_working.py  test_evaluation_frameworks.py  test_evaluation_quality.py  test_system_health.py
config/: config.toml  tech_stack_mapping.json
docs/: ARCHITECTURE.md  INDEX.md  TROUBLESHOOTING.md
examples/: database_cluster_prompt.md  docker-compose-monitoring-stack.md  evaluation_demo.py  monitoring-stack-dedicated-template.md  monitoring-stack-evaluation-results.json  monitoring-stack-evaluation.json  monitoring_system_prompt.md  prompt_quality_evaluation.md  recursive_generation_demo.py
knowledge_base/: technology_knowledge.json
knowledge_base/best_practices/: airbnb_style_guide.md  ansible_best_practices.md  clean_code_principles.md  component_based_architecture.md  containerization_principles.md  docker_best_practices.md  docker_compose_best_practices.md  eslint_recommended.md  functional_programming_principles.md  galera_cluster_management.md  idiomatic_python.md  infrastructure_as_code_principles.md  mariadb_best_practices.md  multi_container_application_design.md  mysql_performance_optimization.md  pep8.md  react_best_practices.md  state_management_patterns.md
knowledge_base/tools/: ansible.json  black.json  docker.json  docker_compose.json  eslint.json  eslint_plugin_react.json  galera_cluster.json  jest.json  mariadb.json  mysql.json  prettier.json  proxysql.json  pylint.json  pytest.json  react_testing_library.json
prompts/base_prompts/: devops_prompt.txt  focused_api_prompt.txt  focused_devops_prompt.txt  generic_code_prompt.txt  optimized_code_prompt.txt  production_devops_prompt.txt  production_ready_prompt.txt
prompts/evaluation_prompts/: performance_evaluation_prompt.txt  security_evaluation_prompt.txt
prompts/framework_specific/docker/: monitoring_stack_prompt.txt
prompts/framework_specific/react/: component_prompt.txt  focused_component_prompt.txt  optimized_component_prompt.txt  production_component_prompt.txt
prompts/language_specific/python/: api_development.txt  api_prompt.txt  feature_prompt.txt  production_api_prompt.txt
src/: config_integration.py  config_manager.py  events.py  knowledge_manager.py  knowledge_manager_async.py  performance.py  performance_gates.py  prompt_config.py  prompt_generator.py  prompt_generator_modern.py  recursive_prompt_generator.py  result_types.py  types_advanced.py  utils.py
src/common/: __init__.py  cache_manager.py  error_factories.py  health_check.py  result_helpers.py
src/config/: __init__.py  system_config.py
src/evaluation/: __init__.py  evaluation_prompt_generator.py  evaluation_types.py  humaneval_devops.py  production_readiness.py
src/web_research/: __init__.py  circuit_breaker.py  config.py  container.py  interfaces.py  research_cache.py  research_validator.py  search_providers.py  technology_detector.py  template_generator.py  template_generator_legacy.py  web_researcher.py
src/web_research/template_engines/: __init__.py  ansible_engine.py  base_engine.py  docker_engine.py  infrastructure_engine.py  kubernetes_engine.py  mysql_engine.py  patroni_engine.py  template_factory.py
tests/: __init__.py  test_application_workflows.py  test_error_handling.py  test_knowledge_manager.py  test_modern_patterns.py  test_performance_benchmarks.py  test_performance_gates.py  test_prompt_generator.py  test_property_based.py  test_system_integration.py  test_template_rendering.py
tests/enterprise/: test_enterprise_demo.py  test_enterprise_scenarios.py  test_enterprise_working.py
tests/integration/: test_application_workflows.py  test_config_system.py  test_integration.py  test_modern_component_interactions.py  test_system_integration.py
tests/performance/: test_performance_benchmarks.py  test_performance_gates.py  test_performance_scalability.py
tests/security/: test_security_validation.py
tests/template_engines/: test_mysql_engine.py  test_template_rendering.py
tests/unit/: test_cache_manager.py  test_circuit_breaker.py  test_error_handling.py  test_evaluation_frameworks.py  test_events.py  test_events_system.py  test_knowledge_manager.py  test_knowledge_manager_old.py  test_modern_patterns.py  test_performance.py  test_prompt_generator.py  test_prompt_generator_modern.py  test_property_based.py  test_recursive_prompt_generator.py  test_result_types.py  test_system_config.py  test_template_engines.py  test_utils.py  test_web_research_components.py
